--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -145,3 +145,19 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
 }
+
+
+.logo-img{
+    display: flex;
+    justify-content: center;
+    margin: 10px 0 0px 0;
+}
+
+.logo-img img{
+    padding: 1rem 0;
+    width: 200px;
+}
+
+.row button{
+    margin: 10px 0;
+}
