--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
   <div class="container-fluid imagen-dash">
     <h2 class="title-bio">BIO</h2>
     <img src="../../../assets/images/logo.png" width="250px" alt="">
-    <h2 class="sub-bio">CEL</h2>
+    <h2 class="sub-bio">CELL</h2>
   </div>
 </div>
  
